name:                juno
version:             0.0.0.1
synopsis:            Bynzantine Fault Tolerant Raft
description:         An implementation of a Byzantine Fault Tolerant Raft protocol.
homepage:            https://github.com/buckie/juno
author:              Chris Copeland, Will Martino
maintainer:          chrisnc@cs.stanford.edu, wjmartino@gmail.com
copyright:           Copyright (C) 2014-2015 Chris Copeland, Copyright 2015-2016 (C) Will Martino

license:             BSD3
license-file:        LICENSE

category:            Network
build-type:          Simple
cabal-version:       >=1.20

source-repository head
  type:     git
  location: git@github.com:buckie/juno.git

library
  exposed-modules:     Apps.Juno.Server
                     , Apps.Juno.Command
                     , Apps.Juno.Client
                     , Apps.Juno.JsonTypes
                     , Apps.Juno.ApiDemoHandler
                     , Apps.Juno.ApiHandlers
                     , Apps.Juno.Ledger
                     , Apps.Juno.Parser
                     , Apps.Juno.Repl
                     , Juno.Consensus.Api
                     , Juno.Consensus.Handle
                     , Juno.Consensus.Server
                     , Juno.Consensus.Client
                     , Juno.Consensus.Commit
                     , Juno.Consensus.Handle.Types
                     , Juno.Consensus.Handle.AppendEntries
                     , Juno.Consensus.Handle.AppendEntriesResponse
                     , Juno.Consensus.Handle.Command
                     , Juno.Consensus.Handle.RequestVote
                     , Juno.Consensus.Handle.RequestVoteResponse
                     , Juno.Consensus.Handle.ElectionTimeout
                     , Juno.Consensus.Handle.HeartbeatTimeout
                     , Juno.Consensus.Handle.Revolution
                     , Juno.Hoplite.Eval
                     , Juno.Hoplite.Heap
                     , Juno.Hoplite.STExcept
                     , Juno.Hoplite.Term
                     , Juno.Hoplite.Transmatic
                     , Juno.Hoplite.Types
                     , Juno.Messaging.Types
                     , Juno.Messaging.ZMQ
                     , Juno.Monitoring.EkgJson
                     , Juno.Monitoring.EkgMonitor
                     , Juno.Monitoring.EkgSnap
                     , Juno.Monitoring.Server
                     , Juno.Persistence.SQLite
                     , Juno.Runtime.Api.ApiServer
                     , Juno.Runtime.MessageReceiver
                     , Juno.Runtime.Role
                     , Juno.Runtime.Sender
                     , Juno.Runtime.Timer
                     , Juno.Spec.Simple
                     , Juno.Types
                     , Juno.Types.Base
                     , Juno.Types.Command
                     , Juno.Types.Config
                     , Juno.Types.Event
                     , Juno.Types.Log
                     , Juno.Types.Message
                     , Juno.Types.Message.Signed
                     , Juno.Types.Message.CMD
                     , Juno.Types.Message.CMDR
                     , Juno.Types.Message.AE
                     , Juno.Types.Message.AER
                     , Juno.Types.Message.RV
                     , Juno.Types.Message.RVR
                     , Juno.Types.Message.REV
                     , Juno.Types.Metric
                     , Juno.Types.Spec
                     , Juno.Util.Combinator
                     , Juno.Util.Util
                     , Schwifty.Swift.M105.Types
                     , Schwifty.Swift.M105.Parser

  build-depends:       SHA2                == 0.2.*
                     , aeson               >= 0.9
                     , aeson-pretty        >= 0.7
                     , ansi-wl-pprint      >= 0.6
                     , array               >= 0.5
                     , async               >= 2.1
                     , attoparsec          >= 0.13
                     , base                >= 3       && < 5
                     , base16-bytestring   >= 0.1
                     , base64-bytestring   >= 1.0.0.1 
                     , bound               == 1.0.*
                     , bytestring          >= 0.10
                     , cereal              == 0.5.*
                     , containers          >= 0.5
                     , criterion           >= 1.1
                     , crypto-api          >= 0.13
                     , deepseq             >= 1.4.1.1
                     , ed25519-donna       == 0.1.1
                     , ekg                 >= 0.4 
                     , ekg-core            >= 0.1.1
                     , ekg-json            >= 0.1
                     , enclosed-exceptions >= 1.0
                     , filepath            >= 1.4
                     , ghc-prim            >= 0.4
                     , hspec               >= 2.2
                     , lens                >= 4.11
                     , lifted-base         >= 0.2
                     , lz4                 == 0.2.*
                     , megaparsec          >= 4.2.0 
                     , monad-control       >= 1.0
                     , monad-loops         >= 0.4
                     , mtl                 >= 2.1
                     , mtl-compat          >= 0.2
                     , network             >= 2.6
                     , parallel            >= 3.2
                     , parsers             >= 0.12
                     , prelude-extras      >= 0.4
                     , primitive           >= 0.6
                     , random              >= 1.1
                     , snap-core           >= 0.9
                     , snap-core-cors      >= 1.2
                     , snap-server         >= 0.9
                     , sqlite-simple       >= 0.4
                     , stm                 >= 2.4
                     , text                >= 1.2
                     , thyme               >= 0.3
                     , time                >= 1.5
                     , transformers        >= 0.4
                     , trifecta            >= 1.5
                     , unagi-chan           >= 0.4
                     , unix                 >= 2.7
                     , unordered-containers >= 0.2
                     , vector               >= 0.11
                     , vector-space         >= 0.10
                     , wreq                 >= 0.4
                     , yaml                 >= 0.8
                     , zeromq4-haskell      >= 0.6.3
                     , zlib                 >= 0.6

  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

-- executable genconfs
--   main-is:             GenerateConfigFiles.hs
--   build-depends:       base 
--                      , containers
--                      , crypto-api
--                      , directory
--                      , ed25519-donna
--                      , filepath
--                      , juno
--                      , network
--                      , thyme
--                      , yaml
--   hs-source-dirs:      executables
--   ghc-options:         -Wall -threaded -rtsopts
--   default-language:    Haskell2010

-- executable junoserver
--   main-is:             JunoServer.hs
--   build-depends:       base 
--                      , juno
--   hs-source-dirs:      executables
--   ghc-options:         -Wall -threaded -rtsopts
--   ghc-prof-options:    -fprof-auto -fprof-auto-calls
--   default-language:    Haskell2010

-- executable junoclient
--   main-is:             JunoClient.hs
--   build-depends:       base 
--                      , juno
--   hs-source-dirs:      executables
--   ghc-options:         -Wall -threaded -rtsopts
--   ghc-prof-options:    -fprof-auto -fprof-auto-calls
--   default-language:    Haskell2010

-- executable junorepl
--   main-is:             JunoRepl.hs
--   build-depends:       base 
--                      , juno
--   hs-source-dirs:      executables
--   ghc-options:         -Wall -threaded -rtsopts
--   ghc-prof-options:    -fprof-auto -fprof-auto-calls
--   default-language:    Haskell2010

-- test-suite hspec
--   other-modules:       ParserSpec
--                      , WireFormatSpec
--                      , JsonTypesSpec
--   type: exitcode-stdio-1.0
--   main-is: hspec.hs
--   hs-source-dirs: tests
--   default-language: Haskell2010
--   build-depends:
--                     base
--                 , SHA2
--                 , aeson
--                 , bytestring
--                 , containers
--                 , hspec
--                 , juno
--                 , text 
