name:                  juno
version:               0.0.0.3
synopsis:              Bynzantine Fault Tolerant Raft
description:           An implementation of a Byzantine Fault Tolerant Raft protocol.
homepage:              https://github.com/haroldcarr/juno
author:                Harold Carr (Chris Copeland, Will Martino)
maintainer:            harold.carr@gmail.com
copyright:             Copyright (C) 2014-2015 Chris Copeland, Copyright 2015-2016 (C) Will Martino, Copyright (C) 2017 Harold Carr
license:               BSD3
license-file:          LICENSE
category:              Network
build-type:            Simple
cabal-version:         >=1.20
tested-with:           GHC==8.8.2, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2
source-repository head
  type:                git
  location:            git@github.com:haroldcarr/juno.git

library
  exposed-modules:     Juno.Consensus.Client
                     , Juno.Consensus.Commit
                     , Juno.Consensus.Handle
                     , Juno.Consensus.Server
                     , Juno.Consensus.Handle.AppendEntries
                     , Juno.Consensus.Handle.AppendEntriesResponse
                     , Juno.Consensus.Handle.Command
                     , Juno.Consensus.Handle.ElectionTimeout
                     , Juno.Consensus.Handle.HeartbeatTimeout
                     , Juno.Consensus.Handle.RequestVote
                     , Juno.Consensus.Handle.RequestVoteResponse
                     , Juno.Consensus.Handle.Revolution
                     , Juno.Consensus.Handle.Types
                     , Juno.Messaging.Types
                     , Juno.Messaging.ZMQ
                     , Juno.Monitoring.EkgJson
                     , Juno.Monitoring.EkgMonitor
                     , Juno.Monitoring.EkgSnap
                     , Juno.Monitoring.Server
                     , Juno.Runtime.MessageReceiver
                     , Juno.Runtime.Role
                     , Juno.Runtime.Sender
                     , Juno.Runtime.Timer
                     , Juno.Spec.Simple
                     , Juno.Types
                     , Juno.Types.Base
                     , Juno.Types.Command
                     , Juno.Types.Config
                     , Juno.Types.Event
                     , Juno.Types.Log
                     , Juno.Types.Message
                     , Juno.Types.Message.CMD
                     , Juno.Types.Message.CMDR
                     , Juno.Types.Message.AE
                     , Juno.Types.Message.AER
                     , Juno.Types.Message.REV
                     , Juno.Types.Message.RV
                     , Juno.Types.Message.RVR
                     , Juno.Types.Message.Signed
                     , Juno.Types.Metric
                     , Juno.Types.Spec
                     , Juno.Util.Combinator
                     , Juno.Util.Util
                     , Apps.X.Client
                     , Apps.X.Command
                     , Apps.X.Parser
                     , Apps.X.Server
  build-depends:       SHA2
                     , aeson
                     , aeson-pretty
                     , ansi-wl-pprint
                     , array
                     , async
                     , attoparsec
                     , base < 5
                     , base16-bytestring
                     , base64-bytestring
                     , bound
                     , bytestring
                     , cereal
                     , containers
                     , criterion
                     , crypto-api
                     , deepseq
                     , ed25519-donna
                     , ekg
                     , ekg-core
                     , ekg-json
                     , enclosed-exceptions
                     , enclosed-exceptions
                     , filepath
                     , ghc-prim
                     , hspec
                     , lens
                     , lifted-base
                     , lz4
                     , megaparsec
                     , monad-control
                     , monad-loops
                     , mtl
                     , mtl-compat
                     , network
                     , parallel
                     , parsers
                     , prelude-extras
                     , primitive
                     , random
                     , snap-core
                     , snap-server
                     , stm
                     , text
                     , thyme
                     , time
                     , transformers
                     , trifecta
                     , unagi-chan
                     , unix
                     , unordered-containers
                     , vector
                     , vector-space
                     , wreq
                     , yaml
                     , zeromq4-haskell
                     , zlib
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-do-bind -O2 -with-rtsopts="-N4"
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

executable xserver
  main-is:             Server.hs
  build-depends:       base < 5
                     , juno
  hs-source-dirs:      app/X
  ghc-options:         -Wall -threaded -rtsopts
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

executable xrun
  main-is:             Run.hs
  build-depends:       async
                     , base < 5
                     , MissingH
                     , process
                     , text
                     , thyme
  hs-source-dirs:      app/X
  ghc-options:         -Wall -threaded -rtsopts
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

executable xclient
  main-is:             Client.hs
  build-depends:       base < 5
                     , juno
  hs-source-dirs:      app/X
  ghc-options:         -Wall -threaded -rtsopts
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

executable genconfs
  main-is:             GenerateConfigFiles.hs
  build-depends:       base < 5
                     , containers
                     , crypto-api
                     , directory
                     , ed25519-donna
                     , filepath
                     , juno
                     , network
                     , thyme
                     , yaml
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded -rtsopts
  default-language:    Haskell2010

test-suite hspec
  other-modules:       WireFormatSpec
  type:                exitcode-stdio-1.0
  main-is:             hspec.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base
                     , SHA2
                     , aeson
                     , bytestring
                     , containers
                     , hspec
                     , juno
                     , text >= 1.2.0.0 && < 1.3
